<resources>
    <string name="app_name">Check penalties</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_check">Check</string>
    <string name="action_feedback">Send feedback</string>
    <string name="action_rate">Rate app</string>
    <string name="label_name">Name of the owner of the vehicle</string>
    <string name="label_surname">Surname of the owner of the vehicle</string>
    <string name="label_patronymic">Patronymic of the owner of the vehicle</string>
    <string name="label_series">Series</string>
    <string name="label_number">Number</string>
    <string name="label_description">Description</string>
    <string name="label_automatically">Automatic check</string>
    <string name="hint_name">Petr</string>
    <string name="hint_surname">Semenov</string>
    <string name="hint_patronymic">Vasiljevich</string>
    <string name="hint_series">MAA</string>
    <string name="hint_number">123456</string>
    <string name="title_activity_addauto">Add car</string>
    <string name="title_activity_editauto">Edit car</string>
    <string name="label_certificate">Certificate of vehicles registration:</string>
    <string name="label_certificate_short">Certificate: %1$s %2$s</string>
    <string name="dialog_deleteauto">Delete the car?</string>
    <string name="label_lastupdate">Updated:</string>
    <string name="label_penalties">Penalties: %1$d</string>
    <string name="label_never">never</string>
    <string name="dialog_autoexists">Auto with this certificate already exists!</string>
    <string name="title_activity_penalty">Penalty</string>
    <string name="label_resolutionnumber">Number of resolution:</string>
    <string name="label_penaltydate">Date of the offense:</string>
    <string name="dialog_deletepenalty">Delete penalty?</string>
    <string name="dialog_controlauto">Surname, name, series and number of registration certificate must be filled!</string>
    <string name="hint_addfoto">Add photo</string>
    <string name="error_createimage">Can not create image!</string>
    <string name="error_convertimage">Can not convert image!</string>
    <string name="dialog_camera">Camera</string>
    <string name="dialog_gallery">Gallery</string>
    <string name="dialog_addfoto">Add foto</string>
    <string name="dialog_noautos">No autos!</string>
    <string name="dialog_nopenalties">No penalties!</string>
    <plurals name="dialog_penaltyfound">
        <item quantity="one">%1$d penalty found!</item>
        <item quantity="two">%1$d penalties found!</item>
        <item quantity="few">%1$d penalties found!</item>
        <item quantity="many">%1$d penalties found!</item>
        <item quantity="other">%1$d penalties found!</item>
    </plurals>
    <plurals name="dialog_numberofpenalties">
        <item quantity="one">Found %1$d new penalty for your cars! To view, open the application.</item>
        <item quantity="two">Found %1$d new penalties for your cars! To view, open the application.</item>
        <item quantity="few">Found %1$d new penalties for your cars! To view, open the application.</item>
        <item quantity="many">Found %1$d new penalties for your cars! To view, open the application.</item>
        <item quantity="other">Found %1$d new penalties for your cars! To view, open the application.</item>
    </plurals>
    <string name="dialog_penaltynotfound">No penalties found!</string>
    <string name="dialog_networkerror">Network error: %1$s</string>
    <string name="dialog_checkinternet">Check your internet connection!</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_payment">Payment of the penalty</string>
    <string name="label_penalties_new">Penalties: %1$d / New: %2$d</string>
    <string name="big_text_help"><![CDATA[<HTML><H2> About the application </H2>
<P> The application is designed to check for the presence of excess of the set speed detected by automatic means of photo and video shooting on a vehicle registered in the Republic of Belarus. </P>
<P> Please note that the information about the presence of the fact of exceeding the speed of traffic becomes available not from the moment of fixation of the speed of movement, but from the date of issuing the decision on imposing an administrative penalty against the owner (owner). The period of imposing an administrative penalty is two months from the day of the commission of the offense. </P>
<H2> How to use the application </H2>
<P> Initially, it is necessary to add one or more vehicles by entering data from the vehicle data sheet. Please note: <u> the letters must fully correspond to those recorded in the data sheet! </U> </P>
<P> If you set the auto-check flag, the check will be performed automatically several times a day, even if the application is not running. If a fine is found, a notification will be generated, by clicking on which you can go to the application, where the new fines found are highlighted in color. </P>
<P> To manually check penalties at once for all vehicles, click the button at the top right or swipe down the list of vehicles. </P>
<P> To remove a car - swipe to the left, to edit - to the right. Clicking on the car will display all previously found fines. Here you can check fines for this car only. </P>
<P> You can remove the penalty from the application by following it to the left. Options for paying a penalty are available after clicking on the icon to the right of the selected penalty. </P>
<H2> Frequently Asked Questions </H2>
<P> <B> Question: </B> Where can I get a copy of the order? <BR>
<B> Answer: </B> In accordance with part 4 of approx. Article 10.3 of the Administrative Procedural Code of the Republic of Belarus on Administrative Offenses, a copy of the decision on imposing an administrative penalty within 3 days from the date of its issuance shall be served or sent by registered mail to the person against whom it was rendered.
If a copy of the decision on imposing an administrative penalty by mail was not received, a copy of the resolution is issued in the administrative practice of the territorial subdivision of the SAI solely at the place of residence of the owner (owner) of the vehicle or the driver of the legal entity.
</P>
<P> <B> Question: </B> What will happen if you do not pay the fine? <BR>
<B> Answer: </B> In case of failure to pay a fine within one month from the date of entry into force of the decision on imposition of an administrative penalty, the body that imposed and implements the administrative penalty sends an idea about the forcible collection of a fine, a copy of the decision on imposing an administrative penalty and other documents required for execution, to the enforcement department at the place of residence of the person subjected to administrative penalty.
</P>
<B> Question: </B> How to appeal the decision? <BR>
<B> Answer: </B> In case of disagreement with bringing to administrative responsibility, a person subjected to an administrative penalty is entitled to apply to the State Traffic Inspectorate at the place of residence with the application within one month from the date of receipt of the copy of the decision, while providing evidence that in the moment of fixation of an administrative offense the vehicle was in the possession or use of another person, or by this moment has left his possession as a result of the unlawful actions of other persons.</HTML>]]></string>
    <string name="big_text_payment">\u0020Pay a fine imposed by the subdivisions of the State Automobile Inspectorate of the Ministry of Internal Affairs, it is possible in the bank cash desk, ATM, payment terminal, information kiosk, Internet banking, mobile banking. \n
\n
To pay a penalty in the "Calculation" system (ERIP), you must select: \n
1) Ministry of Internal Affairs -> Penalties -> SAI -> Photo speed fixation (service no. 381141); \n
        2) enter the registration number of the offense (11 digits):%1$s; \n
3) check the data on the offense (the surname, name, patronymic of the owner of the vehicle and the amount of the penalty); \n
4) make a payment. \n
\n
After payment of the fine, information about its repayment is received within 2-3 minutes in the information systems of the Ministry of Internal Affairs, with a note on the execution of the penalty being automatically placed in the electronic violation card. \n
\n
Dimensions of penalties for violations detected by speed sensors: \n
- for 10-20 km/h - 0.5 of the base value; \n
- 20-30 km/h - 2 base values; \n
- 30-40 km/h - 4 base units; \n
- more than 40 km/h - 6 base units.</string>
    <string name="label_tab_payment">PAYMENT</string>
    <string name="label_tab_info">INFO</string>
    <string name="label_inetpay">Payment via Internet</string>
    <string name="label_ibankpay">Payment via Internet banking</string>
    <string name="link_epay" translatable="false">e-pay.by</string>
    <string name="link_ipay" translatable="false">ipay.by</string>
    <string name="link_webpay" translatable="false">belqi.by</string>
    <string name="link_ibank_apb" translatable="false">ibank.belapb.by</string>
    <string name="link_ibank_asb" translatable="false">ibank.asb.by</string>
    <string name="link_ibank_bsb" translatable="false">24.bsb.by</string>
    <string name="link_ibank_veb" translatable="false">belveb24.by</string>
    <string name="link_ibank_bnb" translatable="false">bs.imbanking.by</string>
    <string name="link_ibank_mtb" translatable="false">mybank.by</string>
    <string name="link_ibank_bps" translatable="false">i.bps-sberbank.by</string>
    <string name="link_ibank_prt" translatable="false">ibank.paritetbank.by</string>
    <string name="link_ibank_stb" translatable="false">stb24.by</string>
    <string name="link_ibank_mmb" translatable="false">online.mmbank.by</string>
    <string name="link_ibank_pri" translatable="false">prior.by/web</string>
    <string name="link_ibank_alf" translatable="false">click.alfa-bank.by</string>
    <string name="link_ibank_vtb" translatable="false">i.i-vtb.by</string>
    <string name="link_ibank_ztb" translatable="false">ib.zepterbank.by</string>
    <string name="link_ibank_bgb" translatable="false">www.e-bgpb.by</string>
    <string name="link_ibank_bta" translatable="false">bta.by</string>
    <string name="link_ibank_teh" translatable="false">it.tb.by</string>
    <string name="link_ibank_ide" translatable="false">ideabank24.by</string>
    <string name="link_ibank_frb" translatable="false">ibank.fransabank.by</string>
    <string name="link_ibank_bib" translatable="false">ibank.belinvestbank.by</string>
    <string name="link_ibank_rrb" translatable="false">sbsibank.by/rrb</string>
    <string name="link_ibank_reb" translatable="false">tbank.rbank.by</string>
    <string name="label_penaltynumber">Number of penalty resolution</string>
    <string name="label_penaltynumber_clip">Number of resolution copied to the buffer!</string>
</resources>
