<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.valdizz.penaltycheck.AutoActivity">
    <item
        android:id="@+id/action_check"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="1"
        android:title="@string/action_check"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:icon="@android:drawable/ic_dialog_email"
        android:orderInCategory="3"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="4"
        android:title="@string/action_help"
        app:showAsAction="never" />
</menu>
