<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/default_padding_16"
    tools:context="com.valdizz.penaltycheck.mvp.autoeditfragment.AutoEditFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/auto_image"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/empty_car" />

        <ImageButton
            android:id="@+id/auto_image_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ic_add_a_photo"
            android:layout_alignRight="@id/auto_image"
            android:layout_alignBottom="@id/auto_image"
            android:padding="@dimen/button_padding"/>

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_16">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_description"
            android:inputType="textCapSentences"
            android:maxLength="200" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_surname"
            android:inputType="textCapCharacters"
            android:maxLength="50" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_name"
            android:inputType="textCapCharacters"
            android:maxLength="50" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPatronymic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_patronymic"
            android:inputType="textCapCharacters"
            android:maxLength="50" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_padding_4"
        android:layout_marginTop="@dimen/default_padding_16"
        android:text="@string/label_certificate"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingRight="@dimen/default_padding_16">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etSeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_series"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters"
                android:maxLength="3"
                android:nextFocusRight="@+id/etNumber"
                android:paddingTop="0dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_number"
                android:inputType="number"
                android:maxLength="6"
                android:paddingTop="0dp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switchAutocheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/default_padding_16"
        android:paddingTop="@dimen/default_padding_16"
        android:text="@string/label_automatically" />

</LinearLayout>
