<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:clickToClose="true"
    app:leftEdgeSwipeOffset="0dp"
    app:rightEdgeSwipeOffset="0dp">

    <LinearLayout
        android:id="@+id/bottom_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_auto_edit"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_action_edit" />

        <ImageView
            android:id="@+id/item_auto_delete"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_action_trash" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/default_padding_4"
        android:paddingTop="@dimen/default_padding_4">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="56dp">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:src="@drawable/ic_refresh"
                app:backgroundTint="@android:color/holo_green_dark"
                app:fabSize="mini" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="KORNEV VLADISLAV VITALJEVICH"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCertificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_certificate_short"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="Skoda Superb 0854 IM-4 мой" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/default_padding_4">

                <TextView
                    android:id="@+id/tvPenalties"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/label_penalties"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/tvLastupdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/label_lastupdate"
                    android:textSize="@dimen/text_small" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.daimajia.swipe.SwipeLayout>